Altered link to jsgo.js

--- a/sample/index.html
+++ b/sample/index.html
@@ -39,6 +39,6 @@
         </div>
     </body>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.0.min.js"></script>
-    <script type="text/javascript" src="../object.js"></script>
+    <script type="text/javascript" src="../jsgo.js"></script>
     <script type="text/javascript" src="sample.js"></script>
 </html>
