--- a/samples/jsgo-collection/index.html
+++ b/samples/jsgo-collection/index.html
@@ -9,6 +9,16 @@
 
     <body>
         <div id="container">
+            <h1>Before selection</h1>
+            <pre id="before">
+
+            </pre>
+            </br>
+            
+            <h1>After selection</h1>
+            <pre id="after">
+                
+            </pre>
 
         </div>
     </body>
