Updated jsgo source in samples

--- a/samples/jsgo-collection/index.html
+++ b/samples/jsgo-collection/index.html
@@ -22,6 +22,6 @@
 
         </div>
     </body>
-    <script type="text/javascript" src="../../jsgo.js"></script>
+    <script type="text/javascript" src="../../build/jsgo.js"></script>
     <script type="text/javascript" src="sample.js"></script>
 <html>
